# bazel-sandbox

./: .bazel.env  .bazelignore  .bazelrc  .env.example  .gitignore  .gitmodules  .pylintrc  .vscodesettings.code-workspace  BUILD  Cargo.toml  NOTES.md  Notes.md  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-rustdocker  bazel-testlogs  buf.work.yaml  buf_deps.bzl  compose.yaml  deps.bzl  global.bzl  go.mod  go.sum  go.work  go.work.sum  greeter.swagger.json  npm.bzl  npm_links.bzl  oci_images.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-project.json  setup.cfg  vscodeworkspacething.json
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/migrations/: 0001_create-movies-and-characters_down.sql  0001_create-movies-and-characters_up.sql  (+2 more)
composed/: Cargo.toml
docker/: BUILD  defs.bzl  docker.sh  docker_run.sh
go/tools/: go.mod
grpc/: BUILD  Cargo.toml  Dockerfile  README.md  build.rs
grpc-bridge/: generate_stubs.sh
grpc-gateway/: README.md  down_grpc_and_gateway.sh  generate_using_docker.sh
grpc/src/: main.rs
postgres-dev/: containerup.sh
rd/: BUILD  README.md  compose.yaml  defs.bzl  docker_compose_up.sh
rd/grpc/: BUILD  Cargo.toml
rd/grpc/src/: main.rs
rs-js-composed/: Cargo.toml
rs-js-grpc/: Cargo.toml  Dockerfile
rs-js-shared/: Cargo.toml
rs-js-web/: Cargo.toml  Dockerfile
rs-web/: Cargo.toml  Dockerfile  new.Dockerfile  old.Dockerfile
scripts/: cargo_raze.sh  curl_gateway.sh  export_bazelenv.sh  gen_project_json.sh  pipfreeze.sh
setup/: README.md
shared/: Cargo.toml
web/: Cargo.toml  Dockerfile
(+223 files in other folders)
