[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.24"
console = "0.15.5"
dotenv = "0.15.0"
mini-redis = "0.4.1"
postgres = "0.19.5"
prost = "0.11.9"
prost-derive = "0.11.9"
prost-types = "0.11.9"
serde = "1.0.162"
serde_derive = "1.0.162"
serde_json = "1.0.96"
tokio = {version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
tonic = "0.9.2"
tonic-reflection = "0.9.1"
uuid = "1.3.2"


[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"
path = "src/main.rs"