[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
dotenv = "0.15.0"
prost = "0.11.9"
prost-derive = "0.11.9"
prost-types = "0.11.9"
tokio = {version = "1", features = ["full"] }
tonic = "0.9.2"
tonic-reflection = "0.9.1"
uuid = "1.3.2"
echochamber_rdproto = { git = "https://github.com/echochamber/rdprotos", branch = "main", features = ["proto_full"] }
# When doing development.
# echochamber_rdproto = { path = "../rdproto", features = ["proto_full"] }

[[bin]]
name = "server"
path = "src/main.rs"